--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <title>Test</title>
+    <!-- Raleway and  Roboto-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+          rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href="index.html" class="logo">Web<span class="studio">Studio</span></a>
         <ul>
           <li>
-            <a href="">Студия</a>
+            <a href="" class="head">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="portfolio.html" class="head">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="" class="head">Контакты</a>
           </li>
         </ul>
       </nav>
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="info">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+38961111111">+38 096 111 11 11</a>
+          <a href="tel:+38961111111" class="info">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -35,7 +39,7 @@
       <h1>Эффективные решения для вашего бизнеса</h1>
       <button type="button">Заказать услугу</button>
     </section>
-    <section class="chem mi">
+    <section class="chem-mi">
       <ul>
         <li>
           <h3>Внимание к деталям</h3>
@@ -81,7 +85,7 @@
         </li>
       </ul>
     </section>
-    <section class="nasha kamanda">
+    <section class="nasha-komanda">
       <h2>Наша команда</h2>
       <ul>
         <li>
@@ -108,7 +112,7 @@
     </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="index.html" class="logo">Web<span class="studio">Studio</span></a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <ul>
         <li>
