--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header>
       <nav>
         <a href="index.html" class="logo">Web<span class="studio">Studio</span></a>
-        <ul>
-          <li>
+        <ul class="nav-ul">
+          <li class="nav-ul-li">
             <a href="" class="head">Студия</a>
           </li>
-          <li>
+          <li class="nav-ul-li">
             <a href="portfolio.html" class="head">Портфолио</a>
           </li>
-          <li>
+          <li class="nav-ul-li">
             <a href="" class="head">Контакты</a>
           </li>
         </ul>
@@ -37,34 +37,34 @@
     <main>
     <section class="osnovnaya">
       <h1>Эффективные решения для вашего бизнеса</h1>
-      <button type="button">Заказать услугу</button>
+      <button type="button" class="butt-zak">Заказать услугу</button>
     </section>
     <section class="chem-mi">
       <ul>
         <li>
           <h3>Внимание к деталям</h3>
-          <p>
+          <p class="h3-text">
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
           </p>
         </li>
         <li>
           <h3>Пунктуальность</h3>
-          <p>
+          <p class="h3-text">
             Задача организации, в особенности же рамки и место обучения кадров
             влечет за собой.
           </p>
         </li>
         <li>
           <h3>Планирование</h3>
-          <p>
+          <p class="h3-text">
             Равным образом консультация с широким активом в значительной степени
             обуславливает.
           </p>
         </li>
         <li>
           <h3>Современные технологии</h3>
-          <p>
+          <p class="h3-text">
             Значимость этих проблем настолько очевидна, что реализация плановых
             заданий.
           </p>
@@ -91,22 +91,22 @@
         <li>
           <img src="images/01b0562402f9066520924acac0be8dc7.jpg" alt="1" width="270"/>
               <h3>Игорь Демьяненко</h3>
-              <p>Product Designer</p>
+              <p class="proffesia">Product Designer</p>
         </li>
         <li>
           <img src="images/8ed9ff0c05008e3e7ae5285b05efd211.jpg" alt="2" width="270"/>
               <h3>Ольга Репина</h3>
-              <p>Frontend Developer</p>
+              <p class="proffesia">Frontend Developer</p>
         </li>
         <li>
           <img src="images/c03fb848ed9dfc89543bbe97156c3661.jpg" alt="3" width="270"/>
               <h3>Николай Тарасов</h3>
-              <p>Marketing</p>
+              <p class="proffesia">Marketing</p>
         </li>
         <li>
           <img src="images/7ff905b2d5f56aa0d2b29aa48e997cd8.jpg" alt="4" width="270"/>
               <h3>Михаил Ермаков</h3>
-              <p>UI Designer</p>
+              <p class="proffesia">UI Designer</p>
         </li>
       </ul>
     </section>
