--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
     <link href="./css/style.css" rel="stylesheet"/>
 </head>
 <body>
+<!--==============================HEADER===========================================-->
 <header>
     <nav>
-        <a href="index.html" class="logo">Web<span class="studio">Studio</span></a>
+        <a href="index.html" class="logo link">Web<span class="studio">Studio</span></a>
         <ul class="nav-ul">
             <li class="nav-ul-li">
-                <a href="" class="head">Студия</a>
+                <a href="" class="head link">Студия</a>
             </li>
             <li class="nav-ul-li">
-                <a href="portfolio.html" class="head">Портфолио</a>
+                <a href="portfolio.html" class="head link">Портфолио</a>
             </li>
             <li class="nav-ul-li">
-                <a href="" class="head">Контакты</a>
+                <a href="" class="head link">Контакты</a>
             </li>
         </ul>
     </nav>
@@ -34,6 +35,8 @@
         </li>
     </ul>
 </header>
+<!--==============================HEADER END===========================================-->
+<!--==================================MAIN=============================================-->
 <main>
     <section class="osnovnaya">
         <h1>Эффективные решения для вашего бизнеса</h1>
@@ -111,6 +114,8 @@
         </ul>
     </section>
 </main>
+<!--==================================MAIN END=============================================-->
+<!--===================================FOOTER==============================================-->
 <footer>
     <a href="index.html" class="logo">Web<span class="studio">Studio</span></a>
     <address>г. Киев, пр-т Леси Украинки, 26</address>
@@ -123,5 +128,6 @@
         </li>
     </ul>
 </footer>
+<!--===================================FOOTER=END==========================================-->
 </body>
 </html>
