--- a/portfolio.html
+++ b/portfolio.html
@@ -10,47 +10,50 @@
     <link href="./css/style.css" rel="stylesheet"/>
 </head>
 <body>
+<!--==============================HEADER===========================================-->
 <header>
     <nav>
-        <a href="index.html" class="logo">Web<span class="studio">Studio</span></a>
+        <a href="index.html" class="logo link">Web<span class="studio">Studio</span></a>
         <ul>
             <li>
-                <a href="" class="head">Студия</a>
+                <a href="" class="head link">Студия</a>
             </li>
             <li>
-                <a href="portfolio.html" class="head">Портфолио</a>
+                <a href="portfolio.html" class="head link">Портфолио</a>
             </li>
             <li>
-                <a href="" class="head">Контакты</a>
+                <a href="" class="head link">Контакты</a>
             </li>
         </ul>
     </nav>
     <ul>
         <li>
-            <a href="mailto:info@devstudio.com" class="info">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="info link">info@devstudio.com</a>
         </li>
         <li>
-            <a href="tel:+38961111111" class="info">+38 096 111 11 11</a>
+            <a href="tel:+38961111111" class="info link">+38 096 111 11 11</a>
         </li>
     </ul>
 </header>
+<!--==============================HEADER END===========================================-->
+<!--==============================MAIN=================================================-->
 <main>
     <section class="work">
         <ul class="work-ul">
             <li class="work-select">
-                <a href="" class="work-select-a">Все</a>
+                <a href="" class="work-select-a link">Все</a>
             </li>
             <li class="work-select">
-                <a href="" class="work-select-a">Веб-сайты</a>
+                <a href="" class="work-select-a link">Веб-сайты</a>
             </li>
             <li class="work-select">
-                <a href="" class="work-select-a">Приложения</a>
+                <a href="" class="work-select-a link">Приложения</a>
             </li>
             <li class="work-select">
-                <a href="" class="work-select-a">Дизайн</a>
+                <a href="" class="work-select-a link">Дизайн</a>
             </li>
             <li class="work-select">
-                <a href="" class="work-select-a">Маркетинг</a>
+                <a href="" class="work-select-a link">Маркетинг</a>
             </li>
         </ul>
     </section>
@@ -104,17 +107,20 @@
         </ul>
     </section>
 </main>
+<!--==============================MAIN=END=============================================-->
+<!--==============================FOOTER===============================================-->
 <footer>
-    <a href="index.html" class="logo">Web<span class="studio">Studio</span></a>
+    <a href="index.html" class="logo link">Web<span class="studio">Studio</span></a>
     <address>г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
         <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-            <a href="tel:+38961111111">+38 096 111 11 11</a>
+            <a class="tel link" href="tel:+38961111111">+38 096 111 11 11</a>
         </li>
     </ul>
 </footer>
+<!--==============================FOOTER=END===========================================-->
 </body>
 </html>
