--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
 <!--==================================MAIN END=============================================-->
 <!--===================================FOOTER==============================================-->
 <footer>
-    <a href="index.html" class="logo">Web<span class="studio">Studio</span></a>
+    <a href="index.html" class="logo link">Web<span class="studio">Studio</span></a>
     <address>г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
         <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-            <a href="tel:+38961111111">+38 096 111 11 11</a>
+            <a class="tel link" href="tel:+38961111111">+38 096 111 11 11</a>
         </li>
     </ul>
 </footer>
