dz-2-posle pravok

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                 <a href="" class="head link">Студия</a>
             </li>
             <li>
-                <a href="portfolio.html" class="head link">Портфолио</a>
+                <a href="portfolio.html" class="head link portfolio">Портфолио</a>
             </li>
             <li>
                 <a href="" class="head link">Контакты</a>
@@ -41,19 +41,19 @@
     <section class="work">
         <ul class="work-ul">
             <li class="work-select">
-                <a href="" class="work-select-a link">Все</a>
+                <button class="work-select-button link">Все</button>
             </li>
             <li class="work-select">
-                <a href="" class="work-select-a link">Веб-сайты</a>
+                <button class="work-select-button link">Веб-сайты</button>
             </li>
             <li class="work-select">
-                <a href="" class="work-select-a link">Приложения</a>
+                <button class="work-select-button link">Приложения</button>
             </li>
             <li class="work-select">
-                <a href="" class="work-select-a link">Дизайн</a>
+                <button class="work-select-button link">Дизайн</button>
             </li>
             <li class="work-select">
-                <a href="" class="work-select-a link">Маркетинг</a>
+                <button class="work-select-button link">Маркетинг</button>
             </li>
         </ul>
     </section>
