--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
         <a href="index.html" class="logo link">Web<span class="studio">Studio</span></a>
         <ul>
             <li>
-                <a href="" class="head link">Студия</a>
+                <a href="index.html" class="head link">Студия</a>
             </li>
             <li>
-                <a href="portfolio.html" class="head link portfolio">Портфолио</a>
+                <a href="portfolio.html" class="head link active">Портфолио</a>
             </li>
             <li>
                 <a href="" class="head link">Контакты</a>
@@ -110,7 +110,7 @@
 <!--==============================MAIN=END=============================================-->
 <!--==============================FOOTER===============================================-->
 <footer>
-    <a href="index.html" class="logo link">Web<span class="studio">Studio</span></a>
+    <a href="index.html" class="logo link">Web<span class="studio-white">Studio</span></a>
     <address>г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
         <li>
