--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="index.html" class="logo link">Web<span class="studio">Studio</span></a>
         <ul class="nav-ul">
             <li class="nav-ul-li">
-                <a href="" class="head link">Студия</a>
+                <a href="" class="head link active">Студия</a>
             </li>
             <li class="nav-ul-li">
                 <a href="portfolio.html" class="head link">Портфолио</a>
@@ -28,10 +28,10 @@
     </nav>
     <ul>
         <li>
-            <a href="mailto:info@devstudio.com" class="info">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="info link">info@devstudio.com</a>
         </li>
         <li>
-            <a href="tel:+38961111111" class="info">+38 096 111 11 11</a>
+            <a href="tel:+38961111111" class="info link">+38 096 111 11 11</a>
         </li>
     </ul>
 </header>
@@ -92,22 +92,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="images/01b0562402f9066520924acac0be8dc7.jpg" alt="1" width="270"/>
+                <img src="images/img%20(5).jpg" alt="1" width="270"/>
                 <h3>Игорь Демьяненко</h3>
                 <p class="proffesia">Product Designer</p>
             </li>
             <li>
-                <img src="images/8ed9ff0c05008e3e7ae5285b05efd211.jpg" alt="2" width="270"/>
+                <img src="images/img%20(6).jpg" alt="2" width="270"/>
                 <h3>Ольга Репина</h3>
                 <p class="proffesia">Frontend Developer</p>
             </li>
             <li>
-                <img src="images/c03fb848ed9dfc89543bbe97156c3661.jpg" alt="3" width="270"/>
+                <img src="images/img%20(7).jpg" alt="3" width="270"/>
                 <h3>Николай Тарасов</h3>
                 <p class="proffesia">Marketing</p>
             </li>
             <li>
-                <img src="images/7ff905b2d5f56aa0d2b29aa48e997cd8.jpg" alt="4" width="270"/>
+                <img src="images/img%20(8).jpg" alt="4" width="270"/>
                 <h3>Михаил Ермаков</h3>
                 <p class="proffesia">UI Designer</p>
             </li>
@@ -117,7 +117,7 @@
 <!--==================================MAIN END=============================================-->
 <!--===================================FOOTER==============================================-->
 <footer>
-    <a href="index.html" class="logo link">Web<span class="studio">Studio</span></a>
+    <a href="index.html" class="logo link">Web<span class="studio-white">Studio</span></a>
     <address>г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
         <li>
